# nu_plugin_json_path

./: Cargo.toml  README.md  test.json
src/: json_path.rs  main.rs
