[package]
name = "nu_plugin_json_path"
version = "0.3.0"
authors = ["Darren Schroeder"]
edition = "2021"
repository = "https://github.com/fdncred/nu_plugin_json_path"
description = "a nushell plugin created to parse json files using jsonpath"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for local development, you can use a path dependency
nu-plugin = { path = "../nushell/crates/nu-plugin", version = "0.91.1" }
nu-protocol = { path = "../nushell/crates/nu-protocol", version = "0.91.1" }
serde_json = "1.0.108"
serde_json_path = "0.6.4"
# nu-plugin = "0.76.0"
# nu-protocol = "0.76.0"
